<resources>
    <string-array name="language_options">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
    <string name="app_name">FastProudSearch</string>
    <string name="search_hint">Serach Product</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="settings_description">Settings</string>
    <string name="favorite_description">Favorite</string>
    <string name="search">Search</string>
    <string name="log_in">LogIn</string>
    <string name="sign_up">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="favorites_button_description">Favorite Button</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="current_password">Current Password</string>
    <string name="new_passwords">New Password</string>
    <string name="confirmnew_password">"Confirm New Password "</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="dark_thema">Dark Thema</string>
    <string name="account_info">Account Info</string>
    <string name="your_user_name">User Name:</string>
    <string name="your_password">Password:</string>
    <string name="change_your_password">Change Password</string>
    <string name="edit_your_profile">Edit Profile</string>
    <string name="logout_account">Logout Account</string>
    <string name="signup">Sign Up</string>
    <string name="selected_language_message">Selected Language: %s</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
</resources>